--- a/overflow.html
+++ b/overflow.html
@@ -6,10 +6,11 @@
     <title>Document</title>
     <style>
         div {
-            width: 50%; 
+            width: 40%; 
             background-color:rgb(247, 217, 182);      
-            overflow: visible;
+            overflow: scroll;
         }
+     
     </style>
 </head>
 <body>
